Fixed scrollbars on promo page

--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: rgb(36, 36, 52);
+  overflow-x: hidden;
 }
 
 code {
